# game.libretro.openlara

./: CMakeLists.txt
depends/common/openlara/: CMakeLists.txt  openlara.txt
game.libretro.openlara/: addon.xml.in
